--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
+html {
+    scroll-behavior: smooth;
+}
+
 /* FONTS */
 @font-face {
     font-family: 'Explorer';
-    src: url('explorer_free_regular_400-webfont.woff2') format('woff2'),
-         url('explorer_free_regular_400-webfont.woff') format('woff');
+    src: url('./cssfonts/explorer_free_regular_400-webfont.woff2') format('woff2'),
+         url('./cssfonts/explorer_free_regular_400-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -16,11 +20,11 @@
 }
 
 .eachSection {
-    padding: 5%;
+    padding: 15% 5% 5%;
 }
 
 #aloha {
-    font-size: 20vw;
+    font-size: 19vw;
     font-family: Explorer;
 }
 
@@ -28,6 +32,7 @@
     font-family: museo-slab;
     text-transform: uppercase;
     font-weight: 900;
+    font-size: 7vw;
 }
 
 .navBar {
@@ -63,18 +68,18 @@
 }
 
 .blue-text {
-    color: #2b988a;
+    color: #45a3a6;
 }
 
 .green-text {
-    color: #63780b;
+    color: #80981d;
 }
 
 .title-intro {
     position: relative;
     margin-bottom: 0;
     text-align: center;
-    margin-top: 50%;
+    margin-top: 30%;
 }
 
 .light-bg {
@@ -110,5 +115,112 @@
     animation-duration: 15s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    right: 5%;
+    position: absolute;
+}
+
+.red-bg {
+    background-color: #fb3c3c;
+}
+
+.link-text {
+    font-family: museo-slab;
+    color: #ffffff;
+    font-weight: 800;
+}
+
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 15px;
+    border-radius: 20px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    margin-bottom: 10%;
+}
+
+.location-title {
+    font-family: cheap-pine-sans;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2em;
+    color: #ffffff;
+}
+
+.horizontalStrip {
+    display: inline-flex;
+    padding-left: 15%;
+}
+
+.ellipseContainer {
+    width: 120px;
+    height: 120px;
+    border-radius: 70px;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.foodPic {
+    height: 100%;
+    transform: translateX(-5%);
+}
+
+.card {
+    display: grid;
+    min-height: 70vw;
+    border-radius: 25px;
+    grid-template-rows: 50% 10%;
+    padding-top: 30px;
+    width: 50vw;
+    margin-right: 40px;
+}
+
+.horizontalGallery {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.card > h4 {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.card > p {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+}
+
+.red-text {
+    color: #fb3c3c;
+    font-size: 10vw;
+    font-family: cheap-pine-sans;
+    width: 60%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    border: 4px dotted #fb3c3c;
+    margin-top: 20%;
+}
+
+.favoritesButton {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    float: right;
+}
+
+.title-intro > span {
+    display: block;
+}
+
+.shapeContainer > img {
+    transform: translateY(25vh);
 }
 
